--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,9 +22,9 @@ phases:
       - echo Writing image definitions file...
       - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - echo "Update Kube Config"      
-      - sudo aws eks update-kubeconfig --region us-east-1 --name my-cluster
+      - aws eks update-kubeconfig --region us-east-1 --name my-cluster
       - echo "Apply changes to kube manifests"            
-      - sudo kubectl apply -f java-app.yml
+      - kubectl apply -f java-app.yml
 artifacts:
     files: 
       - imagedefinitions.json
