--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Knote</description>
 
 	<properties>
+		<sonar.organization>apurv-bidkar</sonar.organization>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<java.version>11</java.version>
 	</properties>
 
