--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
 	<description>Knote</description>
 
 	<properties>
-		<sonar.organization>apurv-bidkar</sonar.organization>
-                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+                <sonar.host.url>http://54.210.84.189:9000/</sonar.host.url>
 		<java.version>11</java.version>
 	</properties>
 
